// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshots renders correctly with custom background color 1`] = `
<div
  className="
        card
        card-flat
        bg-blue-100 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-y8l0kq8b7"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-y8l0kq8b7-content"
  >
    Blue Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with custom border color 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border-red-500 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-pn6ci95ev"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-pn6ci95ev-content"
  >
    Red Border Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with custom className 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        custom-class
      "
  data-testid="card"
  data-variant="flat"
  id="card-46ygb76tn"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-46ygb76tn-content"
  >
    Card Content
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with custom width and height 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-3x5wwyizv"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": "200px",
      "width": "300px",
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-3x5wwyizv-content"
  >
    Custom Size Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with default props 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-ihjfzntfd"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-ihjfzntfd-content"
  >
    Card Content
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with elevated variant 1`] = `
<div
  className="
        card
        card-elevated
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        card-elevated
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="elevated"
  id="card-endc2c5ef"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-endc2c5ef-content"
  >
    Elevated Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with flat variant 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-g61fuzsu8"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-g61fuzsu8-content"
  >
    Flat Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with full border radius 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow undefined 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-ghd0thict"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-ghd0thict-content"
  >
    Full Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with header and footer 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-3vjjg44ot"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="card-header flex justify-between items-center border-b border-gray-200 dark:border-gray-700 px-4 py-3"
    data-testid="card-header"
    id="card-3vjjg44ot-header"
  >
    <div
      data-testid="card-header"
    >
      Card Header
    </div>
  </div>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-3vjjg44ot-content"
  >
    Card Body
  </div>
  <div
    className="card-footer border-t border-gray-200 dark:border-gray-700 px-4 py-3"
    data-testid="card-footer"
    id="card-3vjjg44ot-footer"
  >
    <div
      data-testid="card-footer"
    >
      Card Footer
    </div>
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with hover effect 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
        card-hoverable transition-shadow duration-200 hover:shadow-lg 
        
        
        
        
        
        
        
        p-4
        
      "
  data-hoverable="true"
  data-testid="card"
  data-variant="flat"
  id="card-pgra1e2jg"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-pgra1e2jg-content"
  >
    Hoverable Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with large border radius 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-xl 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-6sf8xc1kj"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-6sf8xc1kj-content"
  >
    Large Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with large padding 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-6
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-isxad9rz1"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-6"
    data-testid="card-content"
    id="card-isxad9rz1-content"
  >
    Large Padding Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with medium border radius 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-5ngu7r4ty"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-5ngu7r4ty-content"
  >
    Medium Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with medium padding 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-tp9ibrgjj"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-tp9ibrgjj-content"
  >
    Medium Padding Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with no border radius 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-none 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-19o78gmhc"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-19o78gmhc-content"
  >
    No Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with no padding 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-0
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-7qzzvcz83"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-0"
    data-testid="card-content"
    id="card-7qzzvcz83-content"
  >
    No Padding Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with onClick handler 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        card-clickable cursor-pointer
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-eemo1z4bw"
  onClick={[Function]}
  onKeyDown={[Function]}
  role="button"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
  tabIndex={0}
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-eemo1z4bw-content"
  >
    Clickable Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with outlined variant 1`] = `
<div
  className="
        card
        card-outlined
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        card-outlined
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="outlined"
  id="card-hbkmpf1cu"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-hbkmpf1cu-content"
  >
    Outlined Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with small border radius 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-sm 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-4
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-4r2ke8auc"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-4"
    data-testid="card-content"
    id="card-4r2ke8auc-content"
  >
    Small Border Radius Card
  </div>
</div>
`;

exports[`Card Snapshots renders correctly with small padding 1`] = `
<div
  className="
        card
        card-flat
        bg-white dark:bg-gray-800 
        shadow rounded-lg 
        card-bordered border border-gray-200 dark:border-gray-700 
         
        
        
        
        
        
        
        
        p-3
        
      "
  data-testid="card"
  data-variant="flat"
  id="card-5mctgs9x5"
  onKeyDown={[Function]}
  role="region"
  style={
    {
      "height": undefined,
      "width": undefined,
    }
  }
>
  <div
    className="p-3"
    data-testid="card-content"
    id="card-5mctgs9x5-content"
  >
    Small Padding Card
  </div>
</div>
`;
